<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_mv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_mv_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/content_desc"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/title_mv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@id/img_mv_poster"
            android:layout_toRightOf="@id/img_mv_poster"
            android:maxLines="1"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/title_tv_mv" />

        <TextView
            android:id="@+id/release_mv_sub"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_mv_poster"
            android:layout_toRightOf="@id/img_mv_poster"
            android:text="@string/release_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/release_mv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/release_mv_sub"
            android:layout_toRightOf="@id/img_mv_poster"
            android:textSize="14sp"
            tools:text="@string/release_tv_mv" />

        <TextView
            android:id="@+id/score_mv_sub"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="55dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_mv_poster"
            android:layout_toRightOf="@id/img_mv_poster"
            android:text="@string/score_list"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/score_mv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/score_mv_sub"
            android:layout_toRightOf="@id/img_mv_poster"
            android:textSize="14sp"
            tools:text="@string/score_tv_mv" />

        <TextView
            android:id="@+id/overview_mv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_mv_poster"
            android:layout_toRightOf="@id/img_mv_poster"
            android:maxLines="3"
            android:textSize="14sp"
            tools:text="@string/overview_tv_mv" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>